--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Creator-Maching/Dashboard-React-Avan-ado/",
+  "homepage": "https://creator-maching.github.io/Dashboard-React-Avan-ado/",
   "name": "dash",
   "private": true,
   "version": "0.0.0",
